test/corpus/literals.txt
===================================================================================================
Numbers
===================================================================================================

function test() {
    123;
    -2137;
    923762112;
    567.8;
    0.;
    9.f;
    0.0000001;
    .10;
    .0f;
    0x0;
    0xffffff;
    0XABCDEF01;
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl_stmt
    name: (ident)
    params: (func_params)
    definition: (func_block
        (expr_stmt
            (literal_int))
        (expr_stmt
            (literal_int))
        (expr_stmt
            (literal_int))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_float))
        (expr_stmt
            (literal_hex))
        (expr_stmt
            (literal_hex))
        (expr_stmt
            (literal_hex)))))





===================================================================================================
NULL
===================================================================================================

function test() {
    NULL;
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl_stmt
    name: (ident)
    params: (func_params)
    definition: (func_block
        (expr_stmt
            (literal_null)))))





===================================================================================================
bool
===================================================================================================

function test() {
    true;
    false;
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl_stmt
    name: (ident)
    params: (func_params)
    definition: (func_block
        (expr_stmt
            (literal_bool))
        (expr_stmt
            (literal_bool)))))





===================================================================================================
string-likes
===================================================================================================

function test() {
    "abrakadabra";
    "String with \"escaped quotes\"";
    "movies\cutscenes\movie_player.w2scene";
    "movies/cutscenes/movie_player.w2scene";
    '_alakazam123';
    'hello\world.w2world';
    'goodbye/world/';
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl_stmt
    name: (ident)
    params: (func_params)
    definition: (func_block
        (expr_stmt
            (literal_string))
        (expr_stmt
            (literal_string))
        (expr_stmt
            (literal_string))
        (expr_stmt
            (literal_string))
        (expr_stmt
            (literal_name))
        (expr_stmt
            (literal_name))
        (expr_stmt
            (literal_name)))))
